--- a/index.html
+++ b/index.html
@@ -438,24 +438,49 @@
             <p class="modal-title">Залиште свої дані, ми вам передзвонимо</p>
             <form class="modal-form">
                 <div class="input-wrapper">
-                    <input type="text" name="user-name" class="modal-input" placeholder="Імʼя"/>
-                <svg class="modal-icon" width="18" height="18">
-                    <use href="./images/index/icons.svg#icon-person-black-18dp"></use>
-                </svg>
-                </div>
-                
+                    <label for="name" class="input-label">Імʼя
+                        <input type="text" name="user-name" id="name" class="modal-input" placeholder="" />
+                        <svg class="modal-icon" width="18" height="18">
+                            <use href="./images/index/icons.svg#icon-person-black-18dp"></use>
+                        </svg>
+                    </label>
 
-                <input type="tel" name="user-tel" class="modal-input" placeholder="Телефон"
-                 required 
-                 pattern="[\+]\d{3}\s[\(]\d{2}[\)]\s\d{3}[\-]\d{2}[\-]\d{2}"/>
-                <svg class="modal-icon" width="18" height="18">
-                    <use href="./images/index/icons.svg#icon-phone-black-18dp"></use>
-                </svg>
-                <input type="email" name="user-email" class="modal-input" placeholder="Пошта"/>
-                <svg class="modal-icon" width="18" height="18">
-                    <use href="./images/index/icons.svg#icon-email-black-18dp"></use>
-                </svg>
-                <input type="text" name="user-comment" class="modal-input" placeholder="Коментар"/>
+                </div>
+
+                <div class="input-wrapper">
+                    <label for="tel" class="input-label">Телефон
+                        <input type="tel" name="user-tel" id="tel" class="modal-input" placeholder="" required
+                            pattern="[\+]\d{3}\s[\(]\d{2}[\)]\s\d{3}[\-]\d{2}[\-]\d{2}" />
+                        <svg class="modal-icon" width="18" height="18">
+                            <use href="./images/index/icons.svg#icon-phone-black-18dp"></use>
+                        </svg>
+                    </label>
+
+                </div>
+
+                <div class="input-wrapper">
+                    <label for="mail" class="input-label">Пошта
+                        <span class="input-wrap">
+                            <input type="email" name="user-email" id="mail" class="modal-input" placeholder=""/>
+                            <svg class="modal-icon" width="18" height="18">
+                                <use href="./images/index/icons.svg#icon-email-black-18dp"></use>
+                            </svg>
+                        </span>
+
+                    </label>
+
+                </div>
+
+                <div class="input-wrapper">
+                    <label for="comment" class="input-label">Коментар
+                        <input type="comment" name="user-comment" id="comment" class="modal-input" placeholder="" />
+                    </label>
+                </div>
+
+                <div class="checkbox">
+                    <input type="input-checkbox" name="agreement" value="" >
+                </div>
+
                 <button type="submit">Відправити</button>
             </form>
         </div>
