--- a/index.html
+++ b/index.html
@@ -436,32 +436,39 @@
                 </svg>
             </button>
             <p class="modal-title">Залиште свої дані, ми вам передзвонимо</p>
-            <form class="modal-form">
-                <div class="input-wrapper">
-                    <label for="name" class="input-label">Імʼя
-                        <input type="text" name="user-name" id="name" class="modal-input" placeholder="" />
-                        <svg class="modal-icon" width="18" height="18">
-                            <use href="./images/index/icons.svg#icon-person-black-18dp"></use>
-                        </svg>
-                    </label>
+            <form action="#" class="modal-form">
 
-                </div>
 
-                <div class="input-wrapper">
-                    <label for="tel" class="input-label">Телефон
-                        <input type="tel" name="user-tel" id="tel" class="modal-input" placeholder="" required
-                            pattern="[\+]\d{3}\s[\(]\d{2}[\)]\s\d{3}[\-]\d{2}[\-]\d{2}" />
-                        <svg class="modal-icon" width="18" height="18">
-                            <use href="./images/index/icons.svg#icon-phone-black-18dp"></use>
-                        </svg>
-                    </label>
-
-                </div>
-
-                <div class="input-wrapper">
-                    <label for="mail" class="input-label">Пошта
+                <label for="user-name" class="input-label"><span>Імʼя</span>
+                    <div class="input-wrapper">
                         <span class="input-wrap">
-                            <input type="email" name="user-email" id="mail" class="modal-input" placeholder=""/>
+                            <input type="text" name="user-name" id="user-name" class="modal-input" />
+                            <svg class="modal-icon" width="18" height="18">
+                                <use href="./images/index/icons.svg#icon-person-black-18dp"></use>
+                            </svg>
+                        </span>
+                    </div>
+                </label>
+
+
+
+                <div class="input-wrapper">
+                    <label for="user-tel" class="input-label"><span>Телефон</span>
+                        <span class="input-wrap">
+                            <input type="tel" name="user-tel" id="user-tel" class="modal-input" required
+                                pattern="[\+]\d{3}\s[\(]\d{2}[\)]\s\d{3}[\-]\d{2}[\-]\d{2}" />
+                            <svg class="modal-icon" width="18" height="18">
+                                <use href="./images/index/icons.svg#icon-phone-black-18dp"></use>
+                            </svg>
+                        </span>
+                    </label>
+
+                </div>
+
+                <div class="input-wrapper">
+                    <label for="user-mail" class="input-label"><span>Пошта</span>
+                        <span class="input-wrap">
+                            <input type="email" name="user-email" id="user-mail" class="modal-input" />
                             <svg class="modal-icon" width="18" height="18">
                                 <use href="./images/index/icons.svg#icon-email-black-18dp"></use>
                             </svg>
@@ -472,13 +479,18 @@
                 </div>
 
                 <div class="input-wrapper">
-                    <label for="comment" class="input-label">Коментар
-                        <input type="comment" name="user-comment" id="comment" class="modal-input" placeholder="" />
+                    <label for="user-comment" class="input-label"><span>Коментар</span>
+                        <span class="input-wrap">
+                            <input type="comment" name="user-comment" id="user-comment" class="modal-input"
+                                placeholder="Введіть текст" />
+                        </span>
                     </label>
                 </div>
 
-                <div class="checkbox">
-                    <input type="input-checkbox" name="agreement" value="" >
+                <div class="input-checkbox">
+
+                    <input type="checkbox" name="agreement" id="checkbox" />
+                    <label for="checkbox" class="">Погоджуюся з розсилкою та приймаю Умови договору</label>
                 </div>
 
                 <button type="submit">Відправити</button>
