--- a/portfolio.html
+++ b/portfolio.html
@@ -283,6 +283,19 @@
                 </ul>
 
             </div>
+            <div class="subscription">
+                <p class="subscription-title">Підпишіться на розсилку</p>
+                <form class="subscrition-email-form">
+                    <label class="footer-label">
+                        <input type="email" name="email" class="footer-input" placeholder="E-mail">
+                    </label>
+                    <button type="submit" class="subsription-button main click">Підписатися
+                        <svg class="icon-send" width="24" height="24">
+                            <use href="./images/index/icons.svg#icon-icon-send"> </use>
+                        </svg>
+                    </button>
+                </form>
+            </div>
         </div>
     </footer>
 </body>
