--- a/portfolio.html
+++ b/portfolio.html
@@ -92,8 +92,9 @@
                         <a class="project" href="/">
                             <div class="project-item-box">
                                 <img src="./images/portfolio/img1.jpg" alt="project_2" width="370">
-                                <p class="overlay">СЛАВА НАЦІЇ! СМЕРТЬ ВОРОГАМ! Якби ви вчились так, як треба, то й мудрість би
-                                була своя</p>
+                                <p class="overlay">СЛАВА НАЦІЇ! СМЕРТЬ ВОРОГАМ! Якби ви вчились так, як треба, то й
+                                    мудрість би
+                                    була своя</p>
                             </div>
                             <div class="project-item-description">
                                 <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
@@ -107,10 +108,10 @@
                             <div class="project-item-box">
                                 <img src="./images/portfolio/img2.jpg" alt="project_3" width="370">
                                 <p class="overlay">СЛАВА УКРАЇНІ! СЛАВА ЗСУ! Подивіться на рай тихий,
-                                Не шукайте, не питайте
-                                Того, що немає
-                                І на небі, а не тілько
-                                На чужому полі.</p>
+                                    Не шукайте, не питайте
+                                    Того, що немає
+                                    І на небі, а не тілько
+                                    На чужому полі.</p>
                             </div>
                             <div class="project-item-description">
                                 <h2 class="project-title">Ресторан Seafood</h2>
@@ -124,9 +125,9 @@
                             <div class="project-item-box">
                                 <img src="./images/portfolio/img3.jpg" alt="project_4" width="370">
                                 <p class="overlay">СЛАВА УКРАЇНІ! СЛАВА ППО! І смеркає, і світає,
-                                День божий минає,
-                                І знову люд потомлений,
-                                І все спочиває.</p>
+                                    День божий минає,
+                                    І знову люд потомлений,
+                                    І все спочиває.</p>
                             </div>
                             <div class="project-item-description">
                                 <h2 class="project-title">Проєкт Prime</h2>
@@ -140,9 +141,9 @@
                             <div class="project-item-box">
                                 <img src="./images/portfolio/img4.jpg" alt="project_5" width="370">
                                 <p class="overlay">СЛАВА УКРАЇНІ! СЛАВА СВУ! І всю мізерію з собою,
-                                Дідами крадене добро,
-                                Тойді оставсь би сиротою
-                                З святими горами Дніпро!</p>
+                                    Дідами крадене добро,
+                                    Тойді оставсь би сиротою
+                                    З святими горами Дніпро!</p>
                             </div>
                             <div class="project-item-description">
                                 <h2 class="project-title">Проєкт Boxes</h2>
@@ -156,9 +157,9 @@
                             <div class="project-item-box">
                                 <img src="./images/portfolio/img5.jpg" alt="project_6" width="370">
                                 <p class="overlay">СЛАВА УКРАЇНІ! СЛАВА ГУР! Несли, несли з чужого поля
-                                І в Україну принесли
-                                Великих слов велику силу,
-                                Та й більш нічого.</p>
+                                    І в Україну принесли
+                                    Великих слов велику силу,
+                                    Та й більш нічого.</p>
                             </div>
                             <div class="project-item-description">
                                 <h2 class="project-title">Inspiration has no Borders</h2>
@@ -172,10 +173,10 @@
                             <div class="project-item-box">
                                 <img src="./images/portfolio/img6.jpg" alt="project_7" width="370">
                                 <p class="overlay">СЛАВА УКРАЇНІ! СЛАВА ДШВ! Нема на світі України,
-                                Немає другого Дніпра,
-                                А ви претеся на чужину
-                                Шукати доброго добра,
-                                Добра святого.</p>
+                                    Немає другого Дніпра,
+                                    А ви претеся на чужину
+                                    Шукати доброго добра,
+                                    Добра святого.</p>
                             </div>
                             <div class="project-item-description">
                                 <h2 class="project-title">Видання Limited Edition</h2>
@@ -189,9 +190,9 @@
                             <div class="project-item-box">
                                 <img src="./images/portfolio/img7.jpg" alt="project_8" width="370">
                                 <p class="overlay">СЛАВА УКРАЇНІ! СЛАВА ПС! Ох, якби те сталось, щоб ви не вертались,
-                                Щоб там і здихали, де ви поросли!
-                                Не плакали б діти, мати б не ридала,
-                                Не чули б у Бога вашої хули.</p>
+                                    Щоб там і здихали, де ви поросли!
+                                    Не плакали б діти, мати б не ридала,
+                                    Не чули б у Бога вашої хули.</p>
                             </div>
                             <div class="project-item-description">
                                 <h2 class="project-title">Проєкт LAB</h2>
@@ -205,9 +206,9 @@
                             <div class="project-item-box">
                                 <img src="./images/portfolio/img8.jpg" alt="project_9" width="370">
                                 <p class="overlay">СЛАВА УКРАЇНІ! СЛАВА ВМС! І сонце не гріло б смердячого гною
-                                На чистій, широкій, на вольній землі.
-                                І люди б не знали, що ви за орли,
-                                І не покивали б на вас головою.</p>
+                                    На чистій, широкій, на вольній землі.
+                                    І люди б не знали, що ви за орли,
+                                    І не покивали б на вас головою.</p>
                             </div>
                             <div class="project-item-description">
                                 <h2 class="project-title">Growing Business</h2>
@@ -286,9 +287,8 @@
             <div class="subscription">
                 <p class="subscription-title">Підпишіться на розсилку</p>
                 <form class="subscrition-email-form">
-                    <label class="footer-label">
-                        <input type="email" name="email" class="footer-input" placeholder="E-mail">
-                    </label>
+                    <input type="email" name="email" class="footer-input" placeholder="E-mail"/>
+
                     <button type="submit" class="subsription-button main click">Підписатися
                         <svg class="icon-send" width="24" height="24">
                             <use href="./images/index/icons.svg#icon-icon-send"> </use>
