--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                 <form class="subscrition-email-form">
                     <input type="email" name="email" class="footer-input" placeholder="E-mail" />
     
-                    <button type="submit" class="subsription-button main click">Підписатися
+                    <button type="submit" class="subsription-button">Підписатися
                         <svg class="icon-send" width="24" height="24">
                             <use href="./images/index/icons.svg#icon-icon-send"> </use>
                         </svg>
