--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
                 </div>
             </label>
                 <div class="input-checkbox">
-                    <input type="checkbox" name="policy" id="policy" class="modal-check is-hidden" />
+                    <input type="checkbox" name="policy" id="policy" class="modal-check is-hidden" required />
                     <label for="policy" class="checkbox-text">
                         <span>
                             <svg class="checkbox-icon" width="16" height="15">
