--- a/index.html
+++ b/index.html
@@ -384,9 +384,6 @@
                 </ul>
             </div>
 
-
-
-
             <div>
                 <p class="soc-items-title">Приєднуйтесь</p>
                 <ul class="soc-items">
@@ -426,9 +423,9 @@
             <div class="subscription">
                 <p class="subscription-title">Підпишіться на розсилку</p>
                 <form class="subscrition-email-form">
-                    <input type="email" name="email" class="footer-input" placeholder="E-mail" />
+                    <input type="email" name="email" class="footer-input" placeholder="E-mail" required />
 
-                    <button type="submit" class="subsription-button btn btn-blue btn-round" >Підписатися
+                    <button type="submit" class="subsription-button btn btn-blue btn-round">Підписатися
                         <svg class="icon-send" width="24" height="24">
                             <use href="./images/index/icons.svg#icon-icon-send"> </use>
                         </svg>
@@ -440,7 +437,7 @@
 
 
 
-    <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop" is-hidden data-modal>
         <div class="modal">
             <button type="button" class="close-button" data-modal-close>
                 <svg class="close-button-icon" width="18" height="18">
@@ -448,9 +445,8 @@
                 </svg>
             </button>
             <p class="modal-title">Залиште свої дані, ми вам передзвонимо</p>
+
             <form action="#" class="modal-form">
-
-
                 <label for="user-name" class="input-label">Імʼя
                     <div class="input-wrapper">
                         <input type="text" name="user-name" id="user-name" class="modal-input" required />
@@ -459,9 +455,6 @@
                         </svg>
                     </div>
                 </label>
-
-
-
 
                 <label for="user-tel" class="input-label">Телефон
                     <div class="input-wrapper">
@@ -473,10 +466,6 @@
                     </div>
                 </label>
 
-
-
-
-
                 <label for="user-mail" class="input-label">Пошта
                     <div class="input-wrapper">
                         <input type="email" name="user-email" id="user-mail" class="modal-input" required />
@@ -486,24 +475,23 @@
                     </div>
                 </label>
 
-
-            <label for="user-comment" class="input-label">Коментар
-                <div class="input-wrapper">
+                <label for="user-comment" class="input-label">Коментар
+                    <div class="input-wrapper">
                         <textarea name="user-comment" id="user-comment" class="modal-comment"
                             placeholder="Введіть текст"></textarea>
-                </div>
-            </label>
-                <div class="input-checkbox">
-                    <input type="checkbox" name="policy" id="policy" class="modal-check is-hidden" required />
-                    <label for="policy" class="checkbox-text">
-                        <span>
-                            <svg class="checkbox-icon" width="16" height="15">
+                    </div>
+                </label>
+
+                <label for="policy" class="checkbox-text">
+                        <input type="checkbox" name="policy" id="policy" class="modal-check" required />
+                            <svg class="checkbox-icon " width="16" height="12">
                                 <use href="./images/index/icons.svg#icon-check"></use>
                             </svg>
-                        </span>
-                        Погоджуюся з розсилкою та приймаю <a class="agreement-link" href="#">Умови договору</a>
-                    </label>
-                </div>
+                            <span class="checkbox-agreement-text">Погоджуюся з розсилкою та приймаю</span>
+                         <a class="agreement-link" href="#">Умови договору</a>
+                    
+                </label>
+
                 <button type="submit" class="modal-send">Відправити</button>
             </form>
         </div>
